fix: allow sidebar TOC scrolling while hiding scrollbar

--- a/_sass/_guides.scss
+++ b/_sass/_guides.scss
@@ -162,7 +162,13 @@
   position: sticky;
   top: calc(60px + var(--space-6));
   max-height: calc(100vh - 60px - var(--space-12));
-  overflow-y: hidden;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .guide-toc-nav {
